fixed pmd issues and added jd